# NES

./: CMakeLists.txt  fix_project.sh
.github/workflows/: fix_dependencies.yml  main.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/barracoder/android/: EmulatorActivity.java  MainActivity.java  NESItemAdapter.java  NESItemHolder.java
android/app/src/main/java/com/barracoder/android/tv/: MainFragment.java
android/app/src/main/res/layout/: activity_main.xml  game_item.xml
src/: cpu6502.c  emulator.c  emulator.h  gfx.c  gfx.h  lua_bridge.c  lua_bridge.h  mmu.c  ppu.c  ppu.h  tas.c  tas.h  timers.c  touchpad.c  touchpad.h  utils.c
src/mappers/: colordreams.c
